Saved note user.

--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -12,7 +12,7 @@
         <li><a href="http://localhost:3000/contato">Contato</a></li>
         <li><a href="http://localhost:3000/sobre">Sobre-M&F-Assessoria<a href=""></a></li>
     </ul>
-    
+        
     <!-- icone para acesso ao usuario -->
-    <a href=""><img class="iconeUsers" src="/images/icone-usuario.png" alt="usuario"></a>
+    <a href="http://localhost:3000/users"><img class="iconeUsers" src="/images/icone-usuario.png" alt="usuario"></a>
 </div>
