--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,7 @@
     <%-include ('partials/navbar') %>
 </header>
 <main id="container">
+  <!--Banner do site-->
   <section>
     <div class="fade-in-animation">
       <img class="background-home" src="/images/farmacia-bg.jpg" alt="fundo-de-boas-vindas">
@@ -25,7 +26,7 @@
       <p class="paragrafo-1">A M&F está agora online.</p>
     </div>
   </section>
-
+ <!--Carrosel de imagem-->
   <section>
     <div class="carrosel">
       <ul>
@@ -48,12 +49,13 @@
           <div class="title">Documento de regulatórios</div>
           <div class="sub-title">R$
           </div>
+          <img src="" alt="">
           <p>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, sed reprehenderit vitae assumenda, odio
             beatae temporibus quasi, voluptatibus rem corporis numquam.
           </p>
           <div class="btn">
-            <a href=""><button>Ver Mais</button></a>
+            <a href="http://localhost:3000/documento"><button>Ver Mais</button></a>
           </div>
         </div>
       </div>
@@ -71,7 +73,7 @@
             hic natus!
           </p>
           <div class="btn">
-            <a href=""><button>Ver Mais</button></a>
+            <a href="http://localhost:3000/farmacia"><button>Ver Mais</button></a>
           </div>
         </div>
       </div>
@@ -88,7 +90,7 @@
             hic natus!
           </p>
           <div class="btn">
-            <a href=""><button>Ver Mais</button></a>
+            <a href="http://localhost:3000/farmacia"><button>Ver Mais</button></a>
           </div>
         </div>
       </div>
@@ -104,7 +106,7 @@
             beatae temporibus quasi, voluptatibus rem corporis numquam.
           </p>
           <div class="btn">
-            <a href=""><button>Ver Mais</button></a>
+            <a href="http://localhost:3000/consulta"><button>Ver Mais</button></a>
           </div>
         </div>
       </div>
@@ -121,7 +123,7 @@
             beatae temporibus quasi, voluptatibus rem corporis numquam.
           </p>
           <div class="btn">
-            <a href=""><button>Ver Mais</button></a>
+            <a href="http://localhost:3000/farmacia"><button>Ver Mais</button></a>
           </div>
         </div>
       </div>
@@ -137,7 +139,7 @@
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum, sed reprehenderit vitae assumenda, odio
             beatae temporibus quasi, voluptatibus rem corporis numquam.
           <div class="btn">
-            <a href=""><button>Ver Mais</button></a>
+            <a href="http://localhost:3000/consulta"><button>Ver Mais</button></a>
           </div>
         </div>
       </div>
@@ -155,6 +157,7 @@
     </div>
   </section>
 
+  <!--Carrosel de imagem-->
   <article>
     <div class="carousel">
       <img src="/images/carrosel-img-1.png" alt="Imagem 1">
