--- a/views/partials/navbar.ejs
+++ b/views/partials/navbar.ejs
@@ -10,9 +10,8 @@
         <li><a href="http://localhost:3000/farmacia">Farmácia</a></li>
         <li><a href="http://localhost:3000/consulta">Consultas</a></li>
         <li><a href="http://localhost:3000/contato">Contato</a></li>
-        <li><a href="http://localhost:3000/sobre">Sobre-M&F-Assessoria<a href=""></a></li>
-    </ul>
-        
+        <li><a href="http://localhost:3000/sobre">Sobre-M&F-Assessoria</a></li>
+    </ul>  
     <!-- icone para acesso ao usuario -->
     <a href="http://localhost:3000/users"><img class="iconeUsers" src="/images/icone-usuario.png" alt="usuario"></a>
-</div>s
+</div>
