--- a/public/css/navbar.css
+++ b/public/css/navbar.css
@@ -26,7 +26,7 @@ ul li a{
 ul li a:hover {
     padding: 10px;
     background-color: #80CBC4;
-    color: #00FF7F;
+    color: #084124;
     border-radius: 10px 10px 10px 10px; 
 }
 
@@ -34,7 +34,7 @@ ul li a:hover {
     width: 50px;
     height: 50px;
     position: relative;
-    right: 250px;
+    right: 160px;
 }
 .iconeUsers{
     width: 30px;
