--- a/views/farmacia.ejs
+++ b/views/farmacia.ejs
@@ -11,8 +11,23 @@
     <%-include ('partials/navbar') %>
   </header>
   <main id="container">
-    
-   <h1>Abertura de farmacia</h1>
+    <!--Titulo-->
+   <h1>Farmácia</h1>
+    <!--Subt titulo-->
+   <h3>Marcas Parceiras</h3>
+   <!--Bloco de cards-->
+   <section>
+    <div class="carrosel">
+      <ul>
+        <li><img src="/images/carrosel-img-1.png" alt=""></li>
+
+        <li><img src="/images/carrosel-img-2.jpeg" alt=""></li>
+
+        <li><img src="/images/carrosel-img-3.jpeg" alt=""></li>
+      </ul>
+    </div>
+  </section>
+
 
     <!-- Botap Whatssap -->
     <a class="whatssap" target="_blank" href="https://wa.me/5511988494342" alt="contato-whatssap">
@@ -27,6 +42,6 @@
     <%-include ('partials/footer') %>
   </footer>
 
- <script src="/javascripts/carrosel-img.js"></script>
+  <script src="/javascripts/carrosel.js"></script>
   </body>
 </html>
