--- a/views/farmacia.ejs
+++ b/views/farmacia.ejs
@@ -19,11 +19,13 @@
    <section>
     <div class="carrosel">
       <ul>
-        <li><img src="/images/carrosel-img-1.png" alt=""></li>
+        <li><img src="/images/farmacias/ultrafarma.png" alt=""></li>
 
-        <li><img src="/images/carrosel-img-2.jpeg" alt=""></li>
+        <li><img src="/images/farmacias/Logo-Sidney-Oliveira.png" alt=""></li>
 
-        <li><img src="/images/carrosel-img-3.jpeg" alt=""></li>
+        <li><img src="/images/farmacias/promofarma.png" alt=""></li>
+
+        <li><img src="/images/farmacias/drogaleste-color.png" alt=""></li>
       </ul>
     </div>
   </section>
