--- a/views/farmacia.ejs
+++ b/views/farmacia.ejs
@@ -19,24 +19,71 @@
    <section>
     <div class="carrosel">
       <ul>
+        <li><img src="/images/farmacias/WhatsApp Image 2022-08-11 at 12.52.32.jpeg" alt=""></li>
+
         <li><img src="/images/farmacias/ultrafarma.png" alt=""></li>
 
         <li><img src="/images/farmacias/Logo-Sidney-Oliveira.png" alt=""></li>
 
-        <li><img src="/images/farmacias/promofarma.png" alt=""></li>
+        <li><img src="/images/farmacias/farmais-logo.png" alt=""></li>
 
-        <li><img src="/images/farmacias/drogaleste-color.png" alt=""></li>
       </ul>
     </div>
   </section>
 
+    <!-- Bloco menssagem -->
+    <section>
+      <div class="menssagem">
+        <h1 id="texto-site" class="fade-in-animation">
+          "Bem-vindos à nossa farmácia! Cuidar de você é a nossa prioridade. Contem conosco para sua saúde e bem-estar!"
+        </h1>
+      </div>
+    </section>
+
+    <!--Galeria de video-->
+    <h1>Galeria de Vídeos</h1>
+    <div class="video-gallery">
+        <div class="video">
+            <iframe width="560" height="315" src="/images/videos-farmacia/WhatsApp Video 2023-07-24 at 18.54.02.mp4 " frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+        <div class="video">
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+        <!-- Adicione mais vídeos aqui -->
+        <div class="video">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+
+        <div class="video">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+
+        <div class="video">
+           <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+
+        <div class="video">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+        </div>
+
+        <div class="video">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+      </div>
+
+      <div class="video">
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/VIDEO_ID_2" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    </div>
+
+    </div>
+
+
+
+        <!--Galeria de video-->
 
     <!-- Botap Whatssap -->
     <a class="whatssap" target="_blank" href="https://wa.me/5511988494342" alt="contato-whatssap">
       <img src="/images/whatsapp-logo-icone.png" alt="Whatssap">
     </a>
-
-
 
   </main>
 
