--- a/public/css/farmacia.css
+++ b/public/css/farmacia.css
@@ -5,10 +5,10 @@
     margin: 0;
     padding: 0;
   }
-  
+  @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
   body {
     margin: 0;
-    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    font-family: 16px 'Lato', sans-serif;
   }
   .container{
     display: flex;
@@ -20,7 +20,10 @@
     text-align: center;
     justify-content: center;
   }
-
+  h3{
+    text-align: center;
+    justify-content: center;
+  }
 
   /* Bloco de empresas parceiras */
 .carrosel{
@@ -45,7 +48,7 @@
 }
 
 .carrosel img{
-  height: 40%;
+  height: 30%;
   align-self: start;
   justify-content: space-between;
   margin-left: 200px;
@@ -62,9 +65,6 @@
     left: -400px;
   }
   60%{
-    left: -600px;
-  }
-  80%{
     left: -800px;
   }
   100%{
@@ -72,6 +72,49 @@
   }
 }
  
+/* Bloco de mensagem */
+.menssagem{
+  background-color: #cfcfcf;
+  width: 100vw;
+  height: 400px;
+}
+
+#texto-site{
+  color: #093f2d;
+  font-size: 34pt;
+  align-items: center;
+  justify-content: space-between;
+  position: relative;
+  top: 150px;
+  text-align: center;
+  
+}
+/* Bloco de mensagem */
+
+/*Bloco de galeria de video*/
+.video-gallery {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+  gap: 20px;
+  padding: 20px;
+}
+
+.video {
+  position: relative;
+  padding-bottom: 56.25%; /* Proporção para manter a relação de aspecto do vídeo 16:9 */
+  overflow: hidden;
+}
+
+iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+/*Bloco de galeria de video*/
+
+
   /* estilo botao whatssap */
   .whatssap img{
       width: 55px;
